--- a/movie_list/movie_list_presentation/src/main/res/layout/movie_list_layout.xml
+++ b/movie_list/movie_list_presentation/src/main/res/layout/movie_list_layout.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <import type="com.kesofty.core.util.ConstantsKt" />
 
         <variable
             name="movie"
@@ -15,37 +18,39 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            srcUrl="@{ConstantsKt.IMAGE_URL.concat(movie.posterPath)}"
+            android:layout_width="150dp"
+            android:layout_height="250dp"
             android:layout_gravity="top|left"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="15dp"
             android:elevation="1dp"
-            android:src="@drawable/placeholder_img" />
+            tools:src="@drawable/placeholder_img" />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top|center"
             android:layout_marginVertical="25dp"
             android:background="@color/card_color"
-            android:orientation="vertical">
-
+            android:paddingStart="10dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="50dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@id/guideline2"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/title_movie_tv"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="20dp"
                     android:text="@{movie.title}"
                     android:textColor="@android:color/white"
-                    android:textSize="25sp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
                     tools:text="@string/maniac_placeholder" />
 
@@ -80,7 +85,14 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
-        </LinearLayout>
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="166dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </FrameLayout>
 </layout>
